// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<XAxis /> handles different ticks input 1`] = `
Array [
  <g
    class="tick"
    opacity="1"
    transform="translate(0.5,0)"
>
    <line
        stroke="#000"
        y2="0"
    />
    <text
        dy="0.71em"
        fill="#000"
        y="8"
    >
        0
    </text>
</g>,
  <g
    class="tick"
    opacity="1"
    transform="translate(180.5,0)"
>
    <line
        stroke="#000"
        y2="0"
    />
    <text
        dy="0.71em"
        fill="#000"
        y="8"
    >
        20
    </text>
</g>,
  <g
    class="tick"
    opacity="1"
    transform="translate(360.5,0)"
>
    <line
        stroke="#000"
        y2="0"
    />
    <text
        dy="0.71em"
        fill="#000"
        y="8"
    >
        40
    </text>
</g>,
  <g
    class="tick"
    opacity="1"
    transform="translate(540.5,0)"
>
    <line
        stroke="#000"
        y2="0"
    />
    <text
        dy="0.71em"
        fill="#000"
        y="8"
    >
        60
    </text>
</g>,
  <g
    class="tick"
    opacity="1"
    transform="translate(720.5,0)"
>
    <line
        stroke="#000"
        y2="0"
    />
    <text
        dy="0.71em"
        fill="#000"
        y="8"
    >
        80
    </text>
</g>,
  <g
    class="tick"
    opacity="1"
    transform="translate(900.5,0)"
>
    <line
        stroke="#000"
        y2="0"
    />
    <text
        dy="0.71em"
        fill="#000"
        y="8"
    >
        100
    </text>
</g>,
]
`;

exports[`<XAxis /> renders axisName 1`] = `
<text
  class="axisName"
  transform="translate(450, 30)"
>
  axisName
</text>
`;

exports[`<XAxis /> renders child tick elements correctly 1`] = `
Array [
  <g
    class="tick"
    opacity="1"
    transform="translate(0.5,0)"
>
    <line
        stroke="#000"
        y2="0"
    />
    <text
        dy="0.71em"
        fill="#000"
        y="8"
    >
        0
    </text>
</g>,
  <g
    class="tick"
    opacity="1"
    transform="translate(90.5,0)"
>
    <line
        stroke="#000"
        y2="0"
    />
    <text
        dy="0.71em"
        fill="#000"
        y="8"
    >
        10
    </text>
</g>,
  <g
    class="tick"
    opacity="1"
    transform="translate(180.5,0)"
>
    <line
        stroke="#000"
        y2="0"
    />
    <text
        dy="0.71em"
        fill="#000"
        y="8"
    >
        20
    </text>
</g>,
  <g
    class="tick"
    opacity="1"
    transform="translate(270.5,0)"
>
    <line
        stroke="#000"
        y2="0"
    />
    <text
        dy="0.71em"
        fill="#000"
        y="8"
    >
        30
    </text>
</g>,
  <g
    class="tick"
    opacity="1"
    transform="translate(360.5,0)"
>
    <line
        stroke="#000"
        y2="0"
    />
    <text
        dy="0.71em"
        fill="#000"
        y="8"
    >
        40
    </text>
</g>,
  <g
    class="tick"
    opacity="1"
    transform="translate(450.5,0)"
>
    <line
        stroke="#000"
        y2="0"
    />
    <text
        dy="0.71em"
        fill="#000"
        y="8"
    >
        50
    </text>
</g>,
  <g
    class="tick"
    opacity="1"
    transform="translate(540.5,0)"
>
    <line
        stroke="#000"
        y2="0"
    />
    <text
        dy="0.71em"
        fill="#000"
        y="8"
    >
        60
    </text>
</g>,
  <g
    class="tick"
    opacity="1"
    transform="translate(630.5,0)"
>
    <line
        stroke="#000"
        y2="0"
    />
    <text
        dy="0.71em"
        fill="#000"
        y="8"
    >
        70
    </text>
</g>,
  <g
    class="tick"
    opacity="1"
    transform="translate(720.5,0)"
>
    <line
        stroke="#000"
        y2="0"
    />
    <text
        dy="0.71em"
        fill="#000"
        y="8"
    >
        80
    </text>
</g>,
  <g
    class="tick"
    opacity="1"
    transform="translate(810.5,0)"
>
    <line
        stroke="#000"
        y2="0"
    />
    <text
        dy="0.71em"
        fill="#000"
        y="8"
    >
        90
    </text>
</g>,
  <g
    class="tick"
    opacity="1"
    transform="translate(900.5,0)"
>
    <line
        stroke="#000"
        y2="0"
    />
    <text
        dy="0.71em"
        fill="#000"
        y="8"
    >
        100
    </text>
</g>,
]
`;

exports[`<XAxis /> renders domain axis 1`] = `
<path
  class="domain"
  d="M0.5,0V0.5H900.5V0"
  stroke="#000"
/>
`;

exports[`<XAxis /> renders linear scale correctly 1`] = `
Array [
  <g
    class="tick"
    opacity="1"
    transform="translate(0.5,0)"
>
    <line
        stroke="#000"
        y2="0"
    />
    <text
        dy="0.71em"
        fill="#000"
        y="8"
    >
        0
    </text>
</g>,
  <g
    class="tick"
    opacity="1"
    transform="translate(90.5,0)"
>
    <line
        stroke="#000"
        y2="0"
    />
    <text
        dy="0.71em"
        fill="#000"
        y="8"
    >
        10
    </text>
</g>,
  <g
    class="tick"
    opacity="1"
    transform="translate(180.5,0)"
>
    <line
        stroke="#000"
        y2="0"
    />
    <text
        dy="0.71em"
        fill="#000"
        y="8"
    >
        20
    </text>
</g>,
  <g
    class="tick"
    opacity="1"
    transform="translate(270.5,0)"
>
    <line
        stroke="#000"
        y2="0"
    />
    <text
        dy="0.71em"
        fill="#000"
        y="8"
    >
        30
    </text>
</g>,
  <g
    class="tick"
    opacity="1"
    transform="translate(360.5,0)"
>
    <line
        stroke="#000"
        y2="0"
    />
    <text
        dy="0.71em"
        fill="#000"
        y="8"
    >
        40
    </text>
</g>,
  <g
    class="tick"
    opacity="1"
    transform="translate(450.5,0)"
>
    <line
        stroke="#000"
        y2="0"
    />
    <text
        dy="0.71em"
        fill="#000"
        y="8"
    >
        50
    </text>
</g>,
  <g
    class="tick"
    opacity="1"
    transform="translate(540.5,0)"
>
    <line
        stroke="#000"
        y2="0"
    />
    <text
        dy="0.71em"
        fill="#000"
        y="8"
    >
        60
    </text>
</g>,
  <g
    class="tick"
    opacity="1"
    transform="translate(630.5,0)"
>
    <line
        stroke="#000"
        y2="0"
    />
    <text
        dy="0.71em"
        fill="#000"
        y="8"
    >
        70
    </text>
</g>,
  <g
    class="tick"
    opacity="1"
    transform="translate(720.5,0)"
>
    <line
        stroke="#000"
        y2="0"
    />
    <text
        dy="0.71em"
        fill="#000"
        y="8"
    >
        80
    </text>
</g>,
  <g
    class="tick"
    opacity="1"
    transform="translate(810.5,0)"
>
    <line
        stroke="#000"
        y2="0"
    />
    <text
        dy="0.71em"
        fill="#000"
        y="8"
    >
        90
    </text>
</g>,
  <g
    class="tick"
    opacity="1"
    transform="translate(900.5,0)"
>
    <line
        stroke="#000"
        y2="0"
    />
    <text
        dy="0.71em"
        fill="#000"
        y="8"
    >
        100
    </text>
</g>,
]
`;

exports[`<XAxis /> renders time scale correctly 1`] = `
Array [
  <g
    class="tick"
    opacity="1"
    transform="translate(0.5,0)"
>
    <line
        stroke="#000"
        y2="0"
    />
    <text
        dy="0.71em"
        fill="#000"
        y="8"
    >
        2017
    </text>
</g>,
  <g
    class="tick"
    opacity="1"
    transform="translate(58.564516129032256,0)"
>
    <line
        stroke="#000"
        y2="0"
    />
    <text
        dy="0.71em"
        fill="#000"
        y="8"
    >
        Tue 03
    </text>
</g>,
  <g
    class="tick"
    opacity="1"
    transform="translate(116.62903225806451,0)"
>
    <line
        stroke="#000"
        y2="0"
    />
    <text
        dy="0.71em"
        fill="#000"
        y="8"
    >
        Thu 05
    </text>
</g>,
  <g
    class="tick"
    opacity="1"
    transform="translate(174.69354838709677,0)"
>
    <line
        stroke="#000"
        y2="0"
    />
    <text
        dy="0.71em"
        fill="#000"
        y="8"
    >
        Sat 07
    </text>
</g>,
  <g
    class="tick"
    opacity="1"
    transform="translate(232.75806451612902,0)"
>
    <line
        stroke="#000"
        y2="0"
    />
    <text
        dy="0.71em"
        fill="#000"
        y="8"
    >
        Mon 09
    </text>
</g>,
  <g
    class="tick"
    opacity="1"
    transform="translate(290.8225806451613,0)"
>
    <line
        stroke="#000"
        y2="0"
    />
    <text
        dy="0.71em"
        fill="#000"
        y="8"
    >
        Wed 11
    </text>
</g>,
  <g
    class="tick"
    opacity="1"
    transform="translate(348.88709677419354,0)"
>
    <line
        stroke="#000"
        y2="0"
    />
    <text
        dy="0.71em"
        fill="#000"
        y="8"
    >
        Fri 13
    </text>
</g>,
  <g
    class="tick"
    opacity="1"
    transform="translate(406.9516129032258,0)"
>
    <line
        stroke="#000"
        y2="0"
    />
    <text
        dy="0.71em"
        fill="#000"
        y="8"
    >
        Jan 15
    </text>
</g>,
  <g
    class="tick"
    opacity="1"
    transform="translate(465.01612903225805,0)"
>
    <line
        stroke="#000"
        y2="0"
    />
    <text
        dy="0.71em"
        fill="#000"
        y="8"
    >
        Tue 17
    </text>
</g>,
  <g
    class="tick"
    opacity="1"
    transform="translate(523.0806451612904,0)"
>
    <line
        stroke="#000"
        y2="0"
    />
    <text
        dy="0.71em"
        fill="#000"
        y="8"
    >
        Thu 19
    </text>
</g>,
  <g
    class="tick"
    opacity="1"
    transform="translate(581.1451612903226,0)"
>
    <line
        stroke="#000"
        y2="0"
    />
    <text
        dy="0.71em"
        fill="#000"
        y="8"
    >
        Sat 21
    </text>
</g>,
  <g
    class="tick"
    opacity="1"
    transform="translate(639.2096774193549,0)"
>
    <line
        stroke="#000"
        y2="0"
    />
    <text
        dy="0.71em"
        fill="#000"
        y="8"
    >
        Mon 23
    </text>
</g>,
  <g
    class="tick"
    opacity="1"
    transform="translate(697.2741935483871,0)"
>
    <line
        stroke="#000"
        y2="0"
    />
    <text
        dy="0.71em"
        fill="#000"
        y="8"
    >
        Wed 25
    </text>
</g>,
  <g
    class="tick"
    opacity="1"
    transform="translate(755.3387096774194,0)"
>
    <line
        stroke="#000"
        y2="0"
    />
    <text
        dy="0.71em"
        fill="#000"
        y="8"
    >
        Fri 27
    </text>
</g>,
  <g
    class="tick"
    opacity="1"
    transform="translate(813.4032258064516,0)"
>
    <line
        stroke="#000"
        y2="0"
    />
    <text
        dy="0.71em"
        fill="#000"
        y="8"
    >
        Jan 29
    </text>
</g>,
  <g
    class="tick"
    opacity="1"
    transform="translate(871.4677419354839,0)"
>
    <line
        stroke="#000"
        y2="0"
    />
    <text
        dy="0.71em"
        fill="#000"
        y="8"
    >
        Tue 31
    </text>
</g>,
  <g
    class="tick"
    opacity="1"
    transform="translate(900.5,0)"
>
    <line
        stroke="#000"
        y2="0"
    />
    <text
        dy="0.71em"
        fill="#000"
        y="8"
    >
        February
    </text>
</g>,
]
`;
